feat: Add mesh simplifier feature, referencing UnityMeshSimplifier

--- a/com.vrcfury.vrcfury/Editor/VRCFury-Editor.asmdef
+++ b/com.vrcfury.vrcfury/Editor/VRCFury-Editor.asmdef
@@ -2,7 +2,8 @@
     "name": "VRCFury-Editor",
     "references": [
         "VRCFury",
-        "VRC.SDKBase.Editor.BuildPipeline"
+        "VRC.SDKBase.Editor.BuildPipeline",
+        "Whinarn.UnityMeshSimplifier.Runtime"
     ],
     "includePlatforms": [
         "Editor"
